--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
     "@angular/platform-server": "^17.0.0",
     "@angular/router": "^17.0.0",
     "@angular/ssr": "^17.0.4",
+    "@nguniversal/express-engine": "^7.0.2",
+    "dio-blog": "file:",
+    "domino": "^2.1.6",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
